JBPM-3840: Added integration testing dependencies and configuration in the pom
Test related:
 - Added Arquillian dependencies and dep management
 - Added Abdera test dependencies
 - Added Spring and Reflections test dependencies
 - Added maven surefire plugin (for integration tests)
 - Added maven clean plugin (for guvnor repository)
 - Added profile (always on) containing arquillian jboss AS7 specific deps